@@ -1,3 +1,8 @@
+ags (2.1.33)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented pulseaudio cache
+
 ags (2.1.32)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
